Refactor templates structure

--- a/src/express/templates/main/search.pug
+++ b/src/express/templates/main/search.pug
@@ -1,4 +1,4 @@
-extends layout.pug
+extends ../layout.pug
 
 block content
   main.page-content
@@ -6,7 +6,7 @@ block content
       h1.visually-hidden Результаты поиска
       .search-results__wrapper
         p.search-results__label
-          | Найдено 
+          | Найдено 
           span.js-results 2 публикации
         ul.search-results__list
           li.search-results__item
