--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -8,6 +8,8 @@ head
   link(rel='stylesheet' href='/css/style.min.css')
   base(href="/")
 body
+  mixin ticketLabel(type)
+    span.ticket-card__label #{type === `OFFER` ? `Куплю` : `Продам`}
   include partials/header.pug
   block content
   include partials/footer.pug
