--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -9,7 +9,7 @@ head
   base(href="/")
 body
   mixin ticketLabel(type)
-    span.ticket-card__label #{type === `OFFER` ? `Куплю` : `Продам`}
+    span(class!=attributes.class || `ticket-card__label`) #{type === `OFFER` ? `Куплю` : `Продам`}
   include partials/header.pug
   block content
   include partials/footer.pug
