--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -8,7 +8,7 @@ header.header
           a(href='my-tickets') Публикации
         li.header__item
           a(href='comments') Комментарии
-    form.search(method='get' action='#' autocomplete='off')
+    form.search(method='get' action='/search' autocomplete='off')
       input(type='search' name='search' placeholder='Поиск' aria-label='Поиск')
       .search__icon
       .search__close-btn
