--- a/src/express/templates/partials/footer.pug
+++ b/src/express/templates/partials/footer.pug
@@ -11,6 +11,6 @@ footer.page-footer
     .page-footer__col
       ul.page-footer__nav
         li
-          a(href='sign-up') Вход и регистрация
+          a(href='/sign-up') Вход и регистрация
         li
-          a(href='new-ticket') Создать объявление
+          a(href='/offers/add') Создать объявление
