--- a/src/express/templates/my/tickets.pug
+++ b/src/express/templates/my/tickets.pug
@@ -8,19 +8,20 @@ block content
           a.tickets-list__btn.btn.btn--big(href='/offers/add')
             span Новая публикация
         ul
-          each offer in _offers
+          each _offer in _offers
             li.tickets-list__item.js-card
               .ticket-card.ticket-card--color01
                 .ticket-card__img
-                  img(src=`/img/${offer.picture}` alt=offer.title)
+                  img(src=`/img/${_offer.picture}` alt=_offer.title)
                 .ticket-card__info
-                  +ticketLabel(offer.type)
+                  +ticketLabel(_offer.type)
                   .ticket-card__categories
-                    a(href='#') #{offer.category}
+                    each category in _offer.categories
+                      a(href='#') #{category.name}
                   .ticket-card__header
                     h3.ticket-card__title
-                      a(href='#') #{offer.title}
+                      a(href='#') #{_offer.title}
                     p.ticket-card__price
-                      span.js-sum #{offer.sum}
+                      span.js-sum #{_offer.sum}
                       |  ₽
                 button.ticket-card__del.js-delete(type='button') Удалить
