--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -10,8 +10,15 @@ head
 body
   mixin ticketLabel(type)
     span(class!=attributes.class || `ticket-card__label`) #{type === `OFFER` ? `Куплю` : `Продам`}
+  
+  - const getRandomInt = (max) => Math.ceil(Math.random() * max);
+  mixin categoryImage(category)
+    - const idPadded = `0${getRandomInt(6)}`
+      img(src=`/img/cat${idPadded}.jpg` srcset=`img/cat${idPadded}@2x.jpg 2x` alt=category.name)
+
   include partials/header.pug
   block content
   include partials/footer.pug
+
   script(src='/js/vendor.js')
   script(src='/js/main.js')
