--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -10,24 +10,24 @@ block content
         .tickets-list__header
           p.tickets-list__title Самое свежее
         ul
-          each _offer in _offers
+          each pugOffer in pugOffers
             li.tickets-list__item
               .ticket-card.ticket-card--color01
                 .ticket-card__img
-                  img(src=`/img/${_offer.picture}` alt=_offer.title)
+                  img(src=`/img/${pugOffer.picture}` alt=pugOffer.title)
                 .ticket-card__info
-                  +ticketLabel(_offer.type)
+                  +ticketLabel(pugOffer.type)
                   .ticket-card__categories
-                    each category in _offer.categories
+                    each category in pugOffer.categories
                       a(href="#") #{category.name}
                   .ticket-card__header
                     h3.ticket-card__title
-                      a(href="#") #{_offer.title}
+                      a(href="#") #{pugOffer.title}
                     p.ticket-card__price
-                      span.js-sum #{_offer.sum}
+                      span.js-sum #{pugOffer.sum}
                       |  ₽
                   .ticket-card__desc
-                    p #{_offer.description}
+                    p #{pugOffer.description}
     section.tickets-list
       h2.visually-hidden Самые обсуждаемые предложения
       .tickets-list__wrapper
