--- a/src/express/templates/offers/offer.pug
+++ b/src/express/templates/offers/offer.pug
@@ -13,22 +13,22 @@ block content
       h1.visually-hidden Карточка объявления
       .ticket__content
         .ticket__img
-          img(src=`/img/${_offer.picture}.jpg`
-            srcset=`/img/${_offer.picture}@2x.jpg 2x`
-            alt=_offer.title)
+          img(src=`/img/${pugOffer.picture}.jpg`
+            srcset=`/img/${pugOffer.picture}@2x.jpg 2x`
+            alt=pugOffer.title)
         .ticket__info
-          h2.ticket__title #{_offer.title}
+          h2.ticket__title #{pugOffer.title}
           .ticket__header
             p.ticket__price
-              span.js-sum #{_offer.sum}
+              span.js-sum #{pugOffer.sum}
               |  ₽
-            p.ticket__action #{_offer.type === `OFFER` ? `КУПЛЮ` : `ПРОДАМ`}
+            p.ticket__action #{pugOffer.type === `OFFER` ? `КУПЛЮ` : `ПРОДАМ`}
           .ticket__desc
-            p #{_offer.description}
+            p #{pugOffer.description}
           .ticket__data
             p
               b Дата добавления:
-              span #{formatDate(_offer.createdAt)}
+              span #{formatDate(pugOffer.createdAt)}
             p
               b Автор:
               a(href='#') Денис Шкатулкин
@@ -36,7 +36,7 @@ block content
               b Контакты:
               a(href='mailto:shkatulkin@ya.ru') shkatulkin@ya.ru
           ul.ticket__tags
-            each category in _offer.categories
+            each category in pugOffer.categories
               li
                 a.category-tile.category-tile--small(href='#')
                   span.category-tile__image
@@ -65,8 +65,8 @@ block content
 
         .ticket__comments-list
           ul.comments-list
-            if _offer.comments && _offer.comments.length
-              each comment in _offer.comments
+            if pugOffer.comments && pugOffer.comments.length
+              each comment in pugOffer.comments
                 li
                   .comment-card
                     .comment-card__header
