--- a/src/express/templates/offers/category.pug
+++ b/src/express/templates/offers/category.pug
@@ -1,7 +1,7 @@
 extends ../layout.pug
 
 block content
-    //- include ../partials/categories.pug
+    include ../partials/categories.pug
               
     section.tickets-list
       h2.visually-hidden Предложения из категории электроника
