--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -16,6 +16,9 @@ body
     - const idPadded = `0${getRandomInt(6)}`
       img(src=`/img/cat${idPadded}.jpg` srcset=`img/cat${idPadded}@2x.jpg 2x` alt=category.name)
 
+  mixin pagination(page, totalPages, width, prefix)
+    include partials/pagination.pug
+
   include partials/header.pug
   block content
   include partials/footer.pug
