--- a/src/express/templates/offers/offer.pug
+++ b/src/express/templates/offers/offer.pug
@@ -49,7 +49,7 @@ block content
                 span.category-tile__label Спорт и отдых
 
       .ticket__comments
-        h2.ticket__subtitle Коментарии
+        h2.ticket__subtitle Комментарии
         .ticket__comment-form
           form.form.comment-form(action='#' method='post')
             .comment-form__header
