--- a/src/express/templates/offers/add.pug
+++ b/src/express/templates/offers/add.pug
@@ -16,8 +16,8 @@ block content
             .ticket-form__content
               .ticket-form__row
                 .form__field
-                  input#ticket-name.js-field(type='text' name='ticket-name' required)
-                  label(for='ticket-name') Название
+                  input#title.js-field(type='text' name='title' required)
+                  label(for='title') Название
                   span Обязательное поле
               .ticket-form__row
                 .form__field
