--- a/src/express/templates/offers/add.pug
+++ b/src/express/templates/offers/add.pug
@@ -40,7 +40,7 @@ block content
                     input#buy-field.visually-hidden(type='radio' name='action' value='OFFER')
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='SELL')
+                    input#sell-field.visually-hidden(type='radio' name='action' value='SALE')
                     label.switch__button(for='sell-field') Продам
             
             +errorMessage(error)
