--- a/src/express/templates/offers/category.pug
+++ b/src/express/templates/offers/category.pug
@@ -19,10 +19,10 @@ block content
                 .ticket-card__info
                   span.ticket-card__label #{pugOffer.type}
                   .ticket-card__categories
-                      a(href='#') #{category.name}
+                      a(href=`/offers/category/${category.id}`) #{category.name}
                   .ticket-card__header
                     h3.ticket-card__title
-                      a(href='#') #{pugOffer.title}
+                      a(href=`/offers/${pugOffer.id}`) #{pugOffer.title}
                     p.ticket-card__price
                       span.js-sum #{pugOffer.sum}
                       |  ₽
