--- a/src/express/templates/offers/offer.pug
+++ b/src/express/templates/offers/offer.pug
@@ -44,7 +44,7 @@ block content
           ul.ticket__tags
             each category in pugOffer.categories
               li
-                a.category-tile.category-tile--small(href='#')
+                a.category-tile.category-tile--small(href=`/offers/category/${category.id}`)
                   span.category-tile__image
                     +categoryImage(category)
                   span.category-tile__label #{category.name}
