--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -19,7 +19,7 @@ block content
                   +ticketLabel(pugOffer.type)
                   .ticket-card__categories
                     each category in pugOffer.categories
-                      a(href="#") #{category.name}
+                      a(href=`/offers/category/${category.id}`) #{category.name}
                   .ticket-card__header
                     h3.ticket-card__title
                       a(href=`/offers/${pugOffer.id}`) #{pugOffer.title}
