--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -6,6 +6,7 @@ head
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
   title Куплю. Продам
   base(href="/")
+  meta(http-equiv="Content-Security-Policy" content="script-src 'self'")
   link(rel='stylesheet' href='/css/style.min.css')
   style.
     .server-error {
