--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -8,35 +8,11 @@ head
   base(href="/")
   meta(http-equiv="Content-Security-Policy" content="script-src 'self'")
   link(rel='stylesheet' href='/css/style.min.css')
-  style.
-    .server-error {
-      margin: 20px 0;
-      padding: 10px;
-
-      background-color: tomato;
-      border-radius: 10px;
-      
-      color: white;
-    }
 body
-  mixin ticketLabel(type)
-    span(class!=attributes.class || `ticket-card__label`) #{type === `OFFER` ? `Куплю` : `Продам`}
-  
-  - const getRandomInt = (max) => Math.ceil(Math.random() * max);
-  mixin categoryImage(category)
-    - const idPadded = `0${getRandomInt(6)}`
-      img(src=`/img/cat${idPadded}.jpg` srcset=`img/cat${idPadded}@2x.jpg 2x` alt=category.name)
-
-  mixin pagination(page, totalPages, width, prefix)
-    include partials/pagination.pug
-
-  mixin errorMessage(message)
-    if (message)
-      .server=error= message
-
-  include partials/header.pug
+  include ./mixins/index.pug
+  include ./partials/header.pug
   block content
-  include partials/footer.pug
+  include ./partials/footer.pug
 
   script(src='/js/vendor.js')
   script(src='/js/main.js')
