--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -3,7 +3,7 @@ extends ../layout.pug
 block content
   main.page-content
     section.login
-      form.login__form.form(action='/login' method='post' enctype='multipart/form-data')
+      form.login__form.form(action='/login' method='post')
         .login__title
           a.login__link(href='sign-up') Регистрация
           h2 Вход
