--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -21,4 +21,4 @@ header(class={header: true, 'header--logged': user})
       a.header__avatar.avatar(href='#')
         img(src=`/img/${user.avatar}` alt='Аватар пользователя')
     else
-      a.header__input(href='sign-up') Вход и регистрация
+      a.header__input(href='register') Вход и регистрация
