--- a/src/express/templates/errors/404.pug
+++ b/src/express/templates/errors/404.pug
@@ -14,7 +14,7 @@ html.html-not-found(lang='ru')
         h2.error__subtitle Страница не найдена
         ul.error__list
           li.error__item
-            a(href='sign-up.html') Вход и регистрация
+            a(href='/register') Вход и регистрация
           li.error__item
             a(href='new-ticket.html') Новая публикация
           li.error__item
