--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -5,7 +5,7 @@ block content
     section.login
       form.login__form.form(action='/login' method='post')
         .login__title
-          a.login__link(href='sign-up') Регистрация
+          a.login__link(href='register') Регистрация
           h2 Вход
 
         .form__field.login__field
