--- a/src/express/templates/main/register.pug
+++ b/src/express/templates/main/register.pug
@@ -3,7 +3,7 @@ extends ../layout.pug
 block content
   main.page-content
     section.sign-up
-      form.sign-up__form.form(action='/sign-up' method='post' enctype='multipart/form-data' autocomplete='off')
+      form.sign-up__form.form(action='/register' method='post' enctype='multipart/form-data' autocomplete='off')
         .sign-up__title
           h2 Регистрация
           a.sign-up__link(href='login') Вход
