--- a/src/express/templates/partials/footer.pug
+++ b/src/express/templates/partials/footer.pug
@@ -17,4 +17,4 @@ footer.page-footer
             a(href='/offers/add') Создать объявление
         else
           li
-            a(href='/sign-up') Вход и регистрация
+            a(href='/register') Вход и регистрация
