--- a/src/express/templates/offers/offer.pug
+++ b/src/express/templates/offers/offer.pug
@@ -76,6 +76,8 @@ block content
                   textarea#comment-field.js-field(name='comment' cols='30' rows='10' maxlength='400' minlength='50') Нормальное вообще кресло! А как насч
                   label(for='comment-field') Текст комментария
                   span Обязательное поле
+              
+              +errorMessage(error)
               button.comment-form__button.btn.btn--white.js-button(type='submit' disabled) Отправить
 
         .ticket__comments-list
