--- a/src/express/templates/my/comments.pug
+++ b/src/express/templates/my/comments.pug
@@ -5,22 +5,23 @@ block content
     section.comments
       .comments__wrapper
         h1.visually-hidden Страница комментариев
-        each pugOffer in pugOffers
+        each pugOffer in userOffers
           .comments__block
             .comments__header
-              a.announce-card(href='#')
+              a.announce-card(href=`/offers/${pugOffer.id}`)
                 h2.announce-card__title #{pugOffer.title}
                 span.announce-card__info
                   span.announce-card__price ₽ #{pugOffer.sum}
                   +ticketLabel(pugOffer.type)(class=`announce-card__type `)
+
             ul.comments-list
               each comment in pugOffer.comments
                 li.js-card
                   .comment-card
                     .comment-card__header
                       a.comment-card__avatar.avatar(href='#')
-                        img(src='img/avatar03.jpg' srcset='img/avatar03@2x.jpg 2x' alt='Аватар пользователя')
-                      p.comment-card__author Александр Бурый
+                        img(src=`img/${comment.users.avatar}` alt='Аватар пользователя')
+                      p.comment-card__author #{comment.users.name}
                     .comment-card__content
                       p #{comment.text}
                     button.comment-card__delete.js-delete(type='button') Удалить
